--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,7 +13,10 @@
         }
         
         .floating-icon {
-            animation: float 3s ease-in-out infinite alternate;
+             animation: float 3s;
+			   animation-timing-function: ease-in-out;
+			   animation-iteration-count: infinite;
+			   animation-direction: alternate;
         }
     </style>
 </head>
@@ -86,11 +89,7 @@
                     <h1 class="text-4xl font-bold text-amber-900 mb-3 font-serif">Login</h1>
 
                     <div class="mt-4 flex justify-center space-x-2">
-                        <span class="text-xl">🌾</span>
-                        <span class="text-xl">🍎</span>
-                        <span class="text-xl">🥕</span>
-                        <span class="text-xl">🥛</span>
-                        <span class="text-xl">🍯</span>
+                        <span class="text-xl">🌻 🌱 🌾 🌽 🚜</span>
                     </div>
                 </div>
                 
