--- a/app/templates/farm.html
+++ b/app/templates/farm.html
@@ -118,8 +118,7 @@
         
                         </div>
                         <div>
-                            <h1 class="text-3xl font-bold text-amber-900 font-serif">Your Farm</h1>
-                            <p class="text-amber-600 font-medium">Basically an incremental farming sim</p>
+                            <h1 class="text-3xl font-bold text-amber-900 font-serif">Your Farm</h1
                         </div>
                     </div>
 
